# AI_Doc_assistant

./: .gitignore  ingestion.py  ingestion_run.txt  main.py  pyproject.toml
backend/: core.py
